--- a/index.html
+++ b/index.html
@@ -1,48 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Resume</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
-</head>
-<body>
-    <header>
-        <h1>Your Name</h1>
-        <p>Your Professional Title</p>
-        <p>Email: your.email@example.com | LinkedIn: your-linkedin | GitHub: your-github</p>
-    </header>
-    <section>
-        <h2>About Me</h2>
-        <p>A brief introduction about yourself.</p>
-    </section>
-    <section>
-        <h2>Skills</h2>
-        <ul>
-            <li>Skill 1</li>
-            <li>Skill 2</li>
-            <li>Skill 3</li>
-        </ul>
-    </section>
-    <section>
-        <h2>Experience</h2>
-        <h3>Job Title at Company Name</h3>
-        <p>Description of your responsibilities and achievements.</p>
-    </section>
-    <section>
-        <h2>Education</h2>
-        <h3>Your Degree at Your University</h3>
-        <p>Year of graduation</p>
-    </section>
-    <section>
-        <h2>Projects</h2>
-        <ul>
-            <li>Project 1: Description and link</li>
-            <li>Project 2: Description and link</li>
-        </ul>
-    </section>
-    <footer>
-        <p>&copy; 2024 Your Name</p>
-    </footer>
-</body>
-</html>
+# John Doe
+
+[Email](mailto:john.doe@example.com) | [LinkedIn](https://linkedin.com/in/johndoe) | [GitHub](https://github.com/johndoe) | [Portfolio](https://johndoe.com)
+
+---
+
+## About Me
+
+Enthusiastic software developer with a passion for building scalable web applications and a strong foundation in full-stack development. Adept at collaborating in diverse team environments to create innovative solutions.
+
+---
+
+## Skills
+
+- **Languages**: JavaScript, Python, Java, HTML, CSS
+- **Frameworks**: React, Node.js, Express, Django
+- **Databases**: MongoDB, PostgreSQL, MySQL
+- **Tools**: Git, Docker, Jenkins, AWS
+- **Soft Skills**: Teamwork, Communication, Problem Solving, Adaptability
+
+---
+
+## Experience
+
+### Software Developer
+**ABC Company** – San Francisco, CA  
+*June 2022 - Present*
+
+- Developed and maintained features for a customer-facing web application using React and Node.js.
+- Collaborated with UX/UI designers to enhance user experience and interface design.
+- Implemented RESTful APIs and integrated third-party services.
+
+### Intern
+**XYZ Corp** – Remote  
+*January 2022 - May 2022*
+
+- Assisted in developing a data visualization tool using Python and Dash.
+- Participated in Agile ceremonies and contributed to sprint planning.
+- Conducted testing and debugging to improve application performance.
+
+---
+
+## Education
+
+**Bachelor of Science in Computer Science**  
+University of California, Berkeley – Berkeley, CA  
+*Graduated May 2022*
+
+---
+
+## Projects
+
+- **Project Tracker**: A web application for tracking project milestones, built with React and Firebase. [GitHub Repository](https://github.com/johndoe/project-tracker)
+- **Weather App**: A weather forecasting app using JavaScript and OpenWeather API. [GitHub Repository](https://github.com/johndoe/weather-app)
+- **Portfolio Website**: A personal portfolio to showcase projects and skills. [Live Demo](https://johndoe.com)
+
+---
+
+## Certifications
+
+- AWS Certified Solutions Architect – Associate
+- Certified Scrum Master (CSM)
+
+---
+
+## Contact
+
+Feel free to reach out for collaboration or inquiries!
+
+---
+
+**© 2024 John Doe**
